--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^4.1.1",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.5",
