--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@mapbox/mapbox-sdk": "^0.13.4",
     "cloudinary": "^1.30.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
