--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "writereviews",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.13.4",
     "cloudinary": "^1.30.1",
